# robotica_aranoua

multi_robot_comunication/: package.xml  setup.cfg  setup.py
multi_robot_comunication/launch/: chat.launch.xml
multi_robot_comunication/multi_robot_comunication/: robot_1.py  robot_2.py  robot_3.py
temperature_monitoring/: package.xml  setup.cfg  setup.py
temperature_monitoring/launch/: chat.launch.xml
temperature_monitoring/msg/: TemperatureData.msg
temperature_monitoring/temperature_monitoring/: temperature_analyzer.py  temperature_publisher.py
